# landslide-monitoring-v2

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .impeccable.md  .prettierrc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CURRENT-TARGET.md  LICENSE  MAINTAINERS.md  README.md  README.zh-CN.md  SECURITY.md  WORKFLOWS.md  WORKSPACE.md  context.yaml  entities.json  eslint.config.cjs  landslide-monitoring-dataset.sql  mempalace.cmd  mempalace.ps1  mempalace.yaml  package-lock.json  package.json  tsconfig.base.json  基于深度学习的滑坡灾害预测预警方法研究_顾昌彪.txt  数据库iot_data表.txt  软通赛题赛道部分解读.txt
.cursor/rules/: algorithm-design.mdc  development-implementation.mdc  doc-management.mdc  project-management.mdc  system-architecture.mdc  testing-validation.mdc
.github/: commit-message-template.txt  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.zh-CN.md  config.yml  feature_request.md  feature_request.zh-CN.md  question.zh-CN.md
.github/workflows/: ci.yml  quality-gates.yml
apps/: README.md
apps/desk/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desk-win/: LandslideDesk.Win.sln  README.md
apps/desktop-ui/: README.md  eslint.config.cjs  package.json  tsconfig.node.json
apps/harmonyos/: .gitignore  ALERT_INTEGRATION.md  PUSH_KIT_SETUP.md  README.md  THIRD_PARTY_NOTICES.md  oh-package.json5
apps/mobile/: README.md  index.html  package.json  pubspec.yaml  tsconfig.json
apps/promo-demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  DEVICE_MANAGEMENT_REFACTOR.md  Dockerfile  GPS-DEFORMATION-README.md  README.md  fix-api-config.js  next.config.js  next.config.ts  nginx.txt  package-lock.json  package.json  suppress-warnings.js  test-baseline-management.js  test-device-management-api.html  test-gps-deformation.js  tsconfig.json
apps/windows-shell/: LandslideDesk.Win.sln  README.md
artifacts/desk-win/: CURRENT-BASELINE.md
docs/: AI_WORKLOG.md  API_INTEGRATION.md  ARCHITECTURE.md  DESK_UI_STYLE_GUIDE.md  LOCAL_DEV.md  PRODUCTION.md  PROJECT_SCOPE.md  README.md  RELEASE.md
docs/architecture/: README.md  overview.md  risk-register.md  rule-engine.md
docs/archive/: README.md
docs/competition/: 2026-softcom-application-master-draft.md  2026-softcom-data-asset-strategy.md  2026-softcom-material-index.md  2026-softcom-technical-route-reverse-evaluation.md  2026-softcom-work-positioning-draft.md  README.md
docs/features/: 00-index.md  README.md  roadmap.md
docs/field-tests/: 2026-07-23-xls1-three-node-batch-poll-canary.json  2026-07-23-xls1-three-node-batch-poll.md  telemetry-pipeline-stress-20260724.md  xls1-compact-broadcast-poll-v2.md  xls1-compact-telemetry-v1.md
docs/guides/: README.md
docs/hardware/: 1.md  field-node-carrier-v0-layout-plan.md  rk2206-v1-schematic-2026-04-23.drawio  rk2206-v1-schematic-guide-2026-04-23.md  rk2206-v1-self-purchase-bom-2026-04-23.csv
docs/incidents/: INC-0001-telemetry-schema-drift.md  INC-0002-secrets-and-credentials-leak.md  INC-0003-frontend-direct-db-access.md  (+10 more)
firmware/rk2206-tongxiao-alarm/: BUILD.gn  README_zh.md
firmware/rk2206-tongxiao-alarm/config/: alarm_config.h
firmware/rk2206-tongxiao-alarm/include/: tongxiao_alarm.h
firmware/rk2206-tongxiao-alarm/src/: alarm_buttons.c  alarm_controller.c  alarm_display.c  alarm_mqtt.c  alarm_outputs.c  alarm_parser.c  alarm_voice.c  tongxiao_alarm_main.c
firmware/rk2206-xl01/: ARCHITECTURE.md  BUILD.gn  CHANGELOG.md  PINOUT.md  README.md  README_zh.md  RK2206_PINOUT_NOTES.zh-CN.md
firmware/rk2206-xl01/app/: command_ack_builder.c  command_ack_builder.h  compact_poll_command.c  compact_poll_command.h  compact_telemetry_builder.c  compact_telemetry_builder.h  device_command_parser.c  device_command_parser.h  device_identity.c  device_identity.h  landslide_monitor.h  sensor_data.h  shared_port_scheduler.c  shared_port_scheduler.h  telemetry_envelope_builder.c  telemetry_envelope_builder.h
firmware/rk2206-xl01/config/: app_config.h
firmware/rk2206-xl01/drivers/sensors/: field_alarm_rs485.c  field_alarm_rs485.h  field_sensors_rs485.c  field_sensors_rs485.h  gps_driver.c  gps_driver.h  gps_module.c  gps_module.h  mpu6050_driver.c  mpu6050_driver.h  rs485_modbus.c  rs485_modbus.h  sc16is752_driver.c  sc16is752_driver.h  sensors.h  sht30_driver.c  sht30_driver.h
firmware/rk2206-xl01/drivers/xl01/: field_link_frame.c  field_link_frame.h  xl01_driver.c  xl01_driver.h
firmware/rk2206-xl01/main/: landslide_main.c
firmware/rk2206-xl01/tests/: compact_telemetry_builder_host_test.c
firmware/rk2206-xl01/utils/: fifo.c  fifo.h  watchdog_mgr.c  watchdog_mgr.h
hardware/: README.md
infra/: README.md
landslide-monitor/: .gitignore  DEPLOYMENT_SECURITY_GUIDE.md  env.example  nginx.txt  命令下发参考.txt  数据库.txt
landslide-monitor/landslide_monitor_嵌入式/: BUILD.gn  GPS地质形变监测说明.md  GPS数据上传修复说明.md  GPS模块集成文档.md  WiFi断开卡死问题修复.md  WiFi状态检查误判问题修复.md  gps_uart.c  gps_uart.h  landslide_monitor_main.c  openharmony.code-workspace  代码整理完成总结.md  华为云命令下发测试指南.md  华为云命令参数修复说明.md  蜂鸣器命令下发测试.md  马达停止命令调试指南.md  马达定时器修复测试指南.md  马达问题完整修复方案.md  马达阻塞问题修复说明.md
landslide-monitor/landslide_monitor_嵌入式/include/: data_storage.h  gps_deformation.h  gps_module.h  iot_cloud.h  lcd.h  lcd_display.h  lcd_font.h  output_devices.h
landslide-monitor/landslide_monitor_嵌入式/src/: data_storage.c  gps_deformation.c  gps_module.c  iot_cloud.c  lcd.c  lcd_display.c  output_devices.c  sensors.c
libs/: README.md
memory/: README.md  TEAM_RULES.md
openspec/: AGENTS.md  project.md
secrets/: README.md
services/: README.md
(+2052 files in other folders)
