static_library("xl01_landslide_monitor") {
    output_name = "xl01_landslide_monitor_v1.1"

    sources = [
        # Main application
        "main/landslide_main.c",

        # App contract builders
        "app/device_identity.c",
        "app/device_command_parser.c",
        "app/telemetry_envelope_builder.c",
        "app/compact_telemetry_builder.c",
        "app/command_ack_builder.c",
        "app/shared_port_scheduler.c",
        
        # Utilities
        "utils/fifo.c",
        "utils/watchdog_mgr.c",
        
        # Drivers - XL01
        "drivers/xl01/field_link_frame.c",
        "drivers/xl01/xl01_driver.c",
        
        # Drivers - Sensors
        "drivers/sensors/sht30_driver.c",
        "drivers/sensors/mpu6050_driver.c",
        "drivers/sensors/gps_driver.c",
        "drivers/sensors/sc16is752_driver.c",
        "drivers/sensors/rs485_modbus.c",
        "drivers/sensors/field_sensors_rs485.c",
        "drivers/sensors/field_alarm_rs485.c",
    ]

    include_dirs = [
        ".",  # 当前项目目录，用于访问utils/fifo.h等
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
    ]
}
