# Copyright (c) 2024 iSoftStone Education Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("landslide_monitor_example") {
  sources = [
    "landslide_monitor_main.c",
    "src/sensors.c",
    "src/output_devices.c",
    "src/lcd_display.c",
    "src/lcd.c",  # 智能家居的稳定LCD驱动
    # "src/lcd_font.c",  # LCD字体库 - 字体数据在头文件中定义，不需要单独的.c文件
    "src/iot_cloud.c",  # 华为云IoT功能
    "src/data_storage.c",  # Flash数据存储功能
    "src/gps_module.c",  # GPS模块功能
    "src/gps_deformation.c",  # GPS形变分析功能
  ]

  include_dirs = [
    "//utils/native/lite/include",
    "include",
    "//kernel/liteos_m/components/shell/include",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//device/rockchip/rk2206/adapter/include",
    "//device/rockchip/rk2206/sdk_liteos/board/include",
    "//device/rockchip/hardware/lib/hal/inc",
    "//device/rockchip/hardware/lib/CMSIS/Device/RK2206/Include/",
    "//third_party/cJSON",
    "//third_party/musl/porting/liteos_m/kernel/include",
    "//third_party/paho_mqtt/MQTTPacket/src",
    "//third_party/paho_mqtt/MQTTClient-C/src",
    "//vendor/isoftstone/rk2206/samples/e1_iot_smart_home/include",
  ]

  deps = [ "//device/rockchip/hardware:hardware" ]

  defines = [
    "LANDSLIDE_MONITOR_VERSION=\"2.0.0\"",
    "SENSOR_SAMPLE_RATE_HZ=10",
    "DATA_BUFFER_SIZE=100",
    "USE_REAL_SENSORS=1",
  ]

  cflags = [
    "-Wall",
    "-Wextra",
    # "-Werror",  # 暂时注释掉，避免系统库警告导致编译失败
    "-std=c99",
  ]

  cflags_c = [
    "-Wno-unused-parameter",
    "-Wno-sign-compare",
    "-Wno-unused-variable",
    "-Wno-missing-braces",
    "-Wno-implicit-function-declaration",
    "-Wno-parentheses",  # 忽略endian.h中的括号警告
    "-Wno-error=parentheses",  # 确保括号警告不被当作错误
  ]
}
